# awsm-web

./: .gitignore  404.html  LICENSE-APACHE  LICENSE-MIT  README.md  index.css  main.js  vs.code-workspace
.github/workflows/: build.yml
crate/: Cargo.toml
crate/src/: env.rs  lib.rs  prelude.rs  unwrap.rs
crate/src/audio/: clip.rs  mixer.rs  mod.rs  player.rs
crate/src/canvas/: context.rs  helpers.rs  mod.rs
crate/src/data/: js_sys.rs
crate/src/dom/: helpers.rs  mod.rs  resize.rs
crate/src/errors/: errors.rs
crate/src/file/: extract.rs  mod.rs  save.rs
crate/src/loaders/: audio.rs  fetch.rs  helpers.rs  image.rs  mod.rs
crate/src/stream/: closure.rs  mod.rs
crate/src/tick/: _raf_deprecated.rs  mainloop.rs  raf.rs  timestamp.rs
crate/src/webgl/: attributes.rs  base.rs  buffers.rs  context.rs  drawing.rs  enums.rs  extensions.rs  framebuffers.rs  mod.rs  query.rs  read.rs  renderbuffers.rs  shader.rs  textures.rs  uniform_buffers.rs  uniforms.rs  vertex_arrays.rs  viewport.rs
crate/src/window/: window.rs
crate/src/workers/: mod.rs  workers.rs
demo/: Makefile.toml  jest.config.js  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.release.js
demo/_static/: index.css
demo/_static/media/: people.json
demo/rust/: Cargo.toml  Makefile.toml
demo/rust/src/: dom.rs  lib.rs  loader.rs  menu.rs  router.rs
demo/rust/src/scenes/audio/: mod.rs  player.rs  player_buffer.rs  player_element.rs
demo/rust/src/scenes/loaders/: image.rs  image_data.rs  json.rs  mod.rs  text.rs
demo/rust/src/scenes/tick/: mainloop.rs
demo/rust/src/scenes/webgl/: mod.rs
demo/rust/src/scenes/webgl/blending/: blending.rs
demo/rust/src/scenes/webgl/common/: datatypes.rs  primitives.rs  starters.rs
demo/rust/src/scenes/webgl/draw_buffers/: draw_buffers.rs  mod.rs
demo/rust/src/scenes/webgl/draw_buffers/shaders/: draw-buffers-texture-fragment.glsl  draw-buffers-texture-vertex.glsl  draw-buffers-webgl1-fragment.glsl  draw-buffers-webgl2-fragment.glsl  draw-buffers-webgl2-vertex.glsl
demo/rust/src/scenes/webgl/elements/: elements.rs
demo/rust/src/scenes/webgl/frame_buffers/: frame_buffers.rs  mod.rs
demo/rust/src/scenes/webgl/instancing/: instancing.rs
demo/rust/src/scenes/webgl/multi_texture/: multi_texture.rs
demo/rust/src/scenes/webgl/render_buffers_multisample/: mod.rs  render_buffers_multisample.rs
demo/rust/src/scenes/webgl/simple/: simple.rs
demo/rust/src/scenes/webgl/simple_vec/: mod.rs  simple_vec.rs
demo/rust/src/scenes/webgl/simple_vec/shaders/: simple-vec-fragment.glsl  simple-vec-vertex.glsl
demo/rust/src/scenes/webgl/texture/: texture.rs
demo/rust/src/scenes/webgl/texture_3d/: texture_3d.rs
demo/rust/src/scenes/webgl/texture_cube/: texture_cube.rs
demo/rust/src/scenes/webgl/ubos/: ubos.rs
demo/rust/src/scenes/webgl/ubos/shaders/: ubos-vertex.glsl
demo/rust/src/scenes/webgl/vaos/: vaos.rs
demo/typescript/: ambient.d.ts  components.ts  index-dev.html  index-prod.html  index.html  index.ts  tsconfig.json
demo/typescript/components/: main.ts
demo/typescript/components/styles/: main.css
demo/typescript/events/: events.ts
demo/typescript/tests/: events.spec.ts
demo/typescript/utils/: common.ts  enums.ts  keys.ts
wasm/demo/pkg/: my_demo.d.ts  my_demo.js  my_demo_bg.d.ts  my_demo_bg.wasm  my_demo_bg.wasm.d.ts
