[package]
name = "awsm_web"
edition = "2018"
version = "0.1.2"
authors = ["David Komer <david.komer@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/dakom/awsm-web"
description = "Wrappers for WASM"
categories = ["wasm"]
keywords = ["webgl", "renderer", "3d", "graphics", "gamedev"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 's'

[features]
all = ["data", "audio", "image", "video", "canvas", "input", "loaders", "tick", "window", "workers", "webgl"]
default = []
data = []
audio = [
    # audio
    "web-sys/AudioContext",
    "web-sys/AudioBuffer",
    "web-sys/AudioNode",
    "web-sys/AudioContextOptions",
    "web-sys/AudioBufferSourceNode",
    "web-sys/AudioBufferSourceOptions",
    "web-sys/AudioDestinationNode",
    "web-sys/AudioBufferOptions",
    'web-sys/Event',
]
image = [
    'web-sys/HtmlImageElement',
    'web-sys/ImageBitmap',
    'web-sys/ImageData',
]
video = [
    'web-sys/HtmlVideoElement',
]
canvas = [
    # canvas
    'web-sys/CanvasRenderingContext2d',
    'web-sys/HtmlCanvasElement',
]
input = [
    'web-sys/MouseEvent',
    'web-sys/Event',
    'web-sys/Element',
    'web-sys/Document',
    'web-sys/EventTarget',
]
loaders = [
    "data",
    "window",
    "web-sys/Request",
    "web-sys/RequestInit",
    "web-sys/Response",
    "web-sys/ResponseInit",
    'web-sys/Location',
    'web-sys/HtmlElement',
    'web-sys/Url',
    'web-sys/Blob',
    'web-sys/BlobPropertyBag',

    "futures",
    "wasm-bindgen-futures",
]
tick = [
    "window",
    "workers"
]

workers = [
    "web-sys/WorkerGlobalScope"
]

window= [
    "web-sys/Window",
]

webgl = [
    "canvas", 
    "image",
    "video",
    "data",

    # core webgl
    'web-sys/WebGlRenderingContext', 
    'web-sys/WebGl2RenderingContext',
    'web-sys/WebGlUniformLocation',
    'web-sys/WebGlBuffer',
    'web-sys/WebGlProgram',
    'web-sys/WebGlShader',
    'web-sys/WebGlTexture',
    'web-sys/WebGlVertexArrayObject',
    'web-sys/WebGlActiveInfo',

    # webgl extensions
    'web-sys/OesVertexArrayObject', 
    'web-sys/AngleInstancedArrays',

    "serde",
    "serde-wasm-bindgen",
    "beach_map",
    "rustc-hash",
]

# more verbose logging
debug_log = []

# skip some webgl cache checks and things. not reliable, just used for debugging
disable_webgl_opt = []

[dependencies]
web-sys = "0.3.36"
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"
log = "0.4.8"
rustc-hash = { version = "1.1.0", optional = true }
serde = { version = "1.0.104", features = ["derive"], optional = true }
beach_map = { version = "0.1.2", optional = true }
wasm-bindgen-futures= { version = "0.4.9", optional = true }
serde-wasm-bindgen = { version = "0.1.3", optional = true }
futures = { version = "0.3.4", optional = true }
