[package]
name = "my_demo"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
awsm_web = { path = "../../crate", features = ["all", "debug_log"]}
nalgebra = "0.31.0"
futures = "0.3.21"
lazy_static = "1.4.0"
lut_parser = "2.1.1"
wasm-bindgen = "0.2.81"
wasm-logger = { version = "0.2.0", optional = true }
gloo-events = "0.1.2"
gloo-timers = "0.2.4"
futures-signals = "0.3.28"
matches = "0.1.9"
js-sys = "0.3.58"
cfg-if = "1.0.0"
paste = "1.0.7"
log = "0.4.17"
num-traits = "0.2.15"
num-derive = "0.3.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_repr = "0.1.8"
serde-wasm-bindgen = "0.4.3"
serde_json = "1.0.81"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen-futures= "0.4.31"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.58", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'ShadowRoot',
  'Performance',
  'Storage',
  'CustomEvent',
  "MouseEvent",
  "HtmlAnchorElement",
  "HtmlElement",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "Node",
  "Window",
  "Performance",
  'console'
] }

[features]
default = ["wee_alloc"]
ts_test = []
quiet = []
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]
